GWT validation and better handling for web (#29)
* GWT-ing libgdx-tools: a Beginning

* GWT shenanigans

---------

Co-authored-by: Zalinius <zalinius@darzalgames.com>