@@ -7,12 +7,14 @@ import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.Function;
 import java.util.function.IntFunction;
+import java.util.stream.Collectors;
 
 import com.badlogic.gdx.scenes.scene2d.actions.DelayAction;
 import com.badlogic.gdx.scenes.scene2d.actions.SequenceAction;
 import com.badlogic.gdx.scenes.scene2d.ui.Label;
 import com.badlogic.gdx.scenes.scene2d.ui.TextButton;
 import com.badlogic.gdx.utils.Align;
+import com.darzalgames.darzalcommon.functional.Runnables;
 import com.darzalgames.libgdxtools.graphics.windowresizer.WindowResizer.ScreenMode;
 import com.darzalgames.libgdxtools.internationalization.TextSupplier;
 import com.darzalgames.libgdxtools.maingame.GameInfo;
@@ -25,7 +27,6 @@ import com.darzalgames.libgdxtools.ui.input.strategy.InputStrategyManager;
 public class WindowResizerTextSelectBox extends WindowResizerSelectBox {
 
 	private static Function<ScreenMode, String> windowModeOptionTranslator = mode -> TextSupplier.getLine(mode.name().toLowerCase()); 
-	private Label revertCountdown;
 
 	public WindowResizerTextSelectBox(TextButton textButton, InputStrategyManager inputStrategyManager) {
 		super(getEntries(), textButton, getAction(), inputStrategyManager);
@@ -45,7 +46,7 @@ public class WindowResizerTextSelectBox extends WindowResizerSelectBox {
 		if (!GameInfo.getGamePlatform().supportsBorderlessFullscreen()) {
 			allModes.remove(ScreenMode.BORDERLESS);
 		}
-		return allModes.stream().map(mode -> windowModeOptionTranslator.apply(mode)).toList();
+		return allModes.stream().map(mode -> windowModeOptionTranslator.apply(mode)).collect(Collectors.toList());
 	}
 
 	@Override
@@ -74,14 +75,21 @@ public class WindowResizerTextSelectBox extends WindowResizerSelectBox {
 	protected ConfirmationMenu getRevertMenu() {
 		return new WindowRevertCountdownConfirmationMenu();
 	}
-
+	
 	private class WindowRevertCountdownConfirmationMenu extends ConfirmationMenu {
+
+		private Label revertCountdown;
 
 		private WindowRevertCountdownConfirmationMenu() {
 			super("screen_mode_accept", 
 					"accept_control",
 					"revert_message",
-					() -> revertCountdown.clearActions());
+					Runnables.nullRunnable());
+		}
+		
+		@Override
+		protected void setChosenKey(String chosenKey) {
+			revertCountdown.clearActions();
 		}
 
 		@Override
